--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="gervill-1.0/gervill/gervill.jar" sourcepath="gervill-1.0/gervill/src">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Temp/workspace/Super Mario Paint/gervill-1.0/gervill/www/javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
