Moving to JavaFX8. Looks like a lot of things break between this and Java 7. Now using a non-static implementation of the FXML controller.

--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="at.bestsolution.efxclipse.tooling.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.7.0_45/lib/javafx-doclet.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.7.0_45/jre/lib/jfxrt.jar"/>
+	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
