--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+      <plugin>
+	      <groupId>com.zenjava</groupId>
+	      <artifactId>javafx-maven-plugin</artifactId>
+	      <version>8.6.0</version>
+	      <configuration>
+		      <mainClass>smp.SuperMarioPaint</mainClass>
+          <preLoader>smp.fx.SplashScreen</preLoader>
+	      </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
