--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build MacOS runtime
       run: |
-        MODS_DIR="${JAVA_HOME}/jmods"
+        JMODS_DIR="${JAVA_HOME}/jmods"
         FX_JMODS_DIR="$GITHUB_WORKSPACE"/jfx-jmods/javafx-jmods-*
         "$JAVA_HOME/bin/jlink" \
          --module-path "$JMODS_DIR:$FX_JMODS_DIR" \
