--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build MacOS runtime
       run: |
         JMODS_DIR="${JAVA_HOME}/jmods"
-        FX_JMODS_DIR="$GITHUB_WORKSPACE"/jfx-jmods/javafx-jmods-*
+        FX_JMODS_DIR="$GITHUB_WORKSPACE/jfx-jmods/javafx-jmods-${{ env.FX_VERSION }}"
         "$JAVA_HOME/bin/jlink" \
          --module-path "$JMODS_DIR:$FX_JMODS_DIR" \
          --add-modules java.base,java.logging,java.desktop,java.xml,javafx.base,javafx.controls,javafx.fxml,javafx.graphics \
