--- a/.github/workflows/mac_build.yml
+++ b/.github/workflows/mac_build.yml
@@ -49,7 +49,7 @@ jobs:
         FX_JMODS_DIR="$GITHUB_WORKSPACE/jfx-jmods/javafx-jmods-${{ env.FX_VERSION }}"
         MODULE_PATH="$JMODS_DIR${{ matrix.path_sep }}$FX_JMODS_DIR"
         "$JAVA_HOME/bin/jlink" \
-         --module-path "$MP" \
+         --module-path "$MODULE_PATH" \
          --add-modules java.base,java.logging,java.desktop,java.xml,javafx.base,javafx.controls,javafx.fxml,javafx.graphics \
          --strip-debug --no-header-files --no-man-pages --compress=2 \
          --output runtime
