--- a/.github/workflows/build_runtime.yml
+++ b/.github/workflows/build_runtime.yml
@@ -36,7 +36,7 @@ jobs:
             dist: linux_x64
             
           # linux aarch64
-          - os: ubuntu-latest
+          - os: ubuntu-24.04-arm
             arch: aarch64
             osheader: linux
             path_sep: ':'
